# hyphenation

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
benches/: lib.rs
hyphenation_commons/: Cargo.toml
hyphenation_commons/src/: language.rs
kl_hyphenate_commons/: Cargo.toml
src/: extended.rs  hyphenator.rs  lib.rs  load.rs  score.rs
tests/: lib.rs
