[package]
name = "kl-hyphenate"
version = "0.7.1"
authors = ["Bastien Dejean <nihilhill@gmail.com>", "Andrew <andrew@banausia.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/baskerville/kl-hyphenate"
homepage = "https://github.com/baskerville/kl-hyphenate"
documentation = "https://docs.rs/kl-hyphenate"
description = "Knuth-Liang hyphenation for a variety of languages"
keywords = ["text", "typesetting"]
exclude = ["/patterns/*"]
readme = "README.md"
build = "build.rs"

[features]
build_dictionaries = []

# Unicode normalization.
#
# HEED: these features are mutually exclusive; only one may be passed to
# rustc/cargo as an argument. `build.rs` ensures that these multiple "features"
# effectively behave as a single, configurable parameter: were the user to
# select more than one normalization form, the build will fail.
nfc = ["unicode-normalization"]
nfd = ["unicode-normalization"]
nfkc = ["unicode-normalization"]
nfkd = ["unicode-normalization"]

[dependencies]
hyphenation_commons = "0.7.1"
atlatl = { version = "0.1.2", features = ["serde"] }
bincode = "1.0"
serde = "1.0"

[build-dependencies]
hyphenation_commons = "0.7.1"
atlatl = { version = "0.1.2", features = ["serde"] }
bincode = "1.0"
serde = "1.0"
unicode-normalization = { version  = "0.1", optional = true }

[dev-dependencies]
lazy_static = "1.1"
quickcheck = "0.7"
unicode-segmentation = "1.2"
